fix: fix the logic error in calendar
