# swagger/calendar.yaml
@@ -390,15 +390,14 @@ paths:
                     type: object
 
   # 진료
-
-  # 날짜별 진료 기록 조회
-  /calendar/consultation/{date}:
+  # 날짜별 진료 목록 전체 조회
+  /calendar/consultation/all/{date}:
     get:
       tags:
         - Calendar
       security:
         - api-key: []
-      summary: 캘린더 - 날짜별 진료 기록 조회
+      summary: 캘린더 - 날짜별 전체 진료 목록 조회
       parameters:
         # - in: "header"
         #   name: "Authorization"
@@ -410,7 +409,7 @@ paths:
           name: date
           schema:
             type: string
-            default: "2024-01-20"
+            default: "2024-02-01"
           required: true
       responses:
         "200":
@@ -459,7 +458,117 @@ paths:
                         updated_at:
                           type: string
                           example: "2024-02-02T07:43:33.000Z"
-                          description: 해당 진료 기록을 수정한 실제 날짜
+                          description: 해당 진료 기록을 수정한 실제 날짜          
+        "404":
+          description: 조회 에러 - 해당 날짜에 진료 기록이 없는 경우
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: 404
+                  message:
+                    type: string
+                    example: "게시글이 없습니다."
+                  result:
+                    type: object
+        "500":
+          description: 서버 에러
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccesss:
+                    type: boolean
+                    example: false
+                  code:
+                    type: integer
+                    example: 500
+                  message:
+                    type: string
+                    example: "서버 에러, 관리자에게 문의 바랍니다."
+                  result:
+                    type: object
+
+  # 날짜별 진료 기록 조회
+  /calendar/consultation/{date}:
+    get:
+      tags:
+        - Calendar
+      security:
+        - api-key: []
+      summary: 캘린더 - 날짜별 진료 기록 개별 조회
+      parameters:
+        # - in: "header"
+        #   name: "Authorization"
+        #   schema:
+        #     type: "string"
+        #   required: true
+        #   description: "JWT 토큰이 필요합니다"
+        - in: path
+          name: date
+          schema:
+            type: string
+            default: "2024-01-20"
+          required: true
+        - in: query
+          name: id
+          schema:
+            type: integer
+            default: 1
+          required: true
+      responses:
+        "200":
+          description: 날짜별 진료 기록 조회 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: "접근에 성공했습니다."
+                  result:
+                    type: object
+                    properties:
+                      consultation_id:
+                        type: integer
+                        example: 16
+                      user_id:
+                        type: integer
+                        example: 3
+                      hospital:
+                        type: string
+                        example: "삼성 병원"
+                      content:
+                        type: string
+                        example: "피부과 방문"
+                      alarmed_date:
+                        type: string
+                        example: "2024-01-20"
+                      alarmed_at:
+                        type: string
+                        example: "10:30:00"
+                      created_at:
+                        type: string
+                        example: "2024-02-02T07:43:33.000Z"
+                        description: 해당 진료 기록을 기입한 실제 날짜
+                      updated_at:
+                        type: string
+                        example: "2024-02-02T07:43:33.000Z"
+                        description: 해당 진료 기록을 수정한 실제 날짜
         "404":
           description: 조회 에러 - 해당 날짜에 진료 기록이 없는 경우
           content:
@@ -764,7 +873,7 @@ paths:
                     type: object
 
   #  날짜별 전체 복용기록 조회
-  /calendar/medication/{date}:
+  /calendar/medication/all/{date}:
     get:
       tags:
         - Calendar
@@ -873,14 +982,14 @@ paths:
                   result:
                     type: object
 
-  #  날짜별,부문(morning,noon, evening)별 복용기록 조회
+  #  날짜별,부문(morning,noon, evening)별 개별 복용기록 조회
   /calendar/medication/{when}/{date}:
     get:
       tags:
         - Calendar
       security:
         - api-key: []
-      summary: 캘린더 - 날짜별, 부문(아침/점심/저녁)별 복용 기록 조회
+      summary: 캘린더 - 날짜별, 부문(아침/점심/저녁)별 개별 복용 기록 조회
       parameters:
         # - in: "header"
         #   name: "Authorization"
@@ -900,6 +1009,12 @@ paths:
           schema:
             type: string
             default: "2024-01-27"
+          required: true
+        - in : query
+          name: id
+          schema:
+            type: integer
+            default: 1
           required: true
       responses:
         "200":
